fix: fix theme in dark mode (#75)

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -22,10 +22,11 @@
 @media (prefers-color-scheme: dark) {
   :root {
     // Theme
-    --element: var(--soft-black);
-    --element-translucent: rgba(0, 0, 0, 0.3);
-    --distinct: var(--white);
     --foundation: var(--black);
+    --element: var(--soft-black);
+    --distinct: var(--white);
+    --foundation-opaque: rgba(0, 0, 0, 0.3);
+    --element-opaque: rgba(51, 51, 51, 0.3);
   }
 }
 
